# pypsis

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml  integrate.yaml
psis/: __init__.py  indices.py  psis.py
tests/: sample_data.py  test_psis.py
