[metadata]
name = psis
license = MIT
author = Aldo Acevedo
author_email = aldo.acevedo.toledo@gmail.com
description = Projection Separability Indices - Python wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biomedical-cybernetics/pypsis
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Clustering

[options]
packages = find:
python_requires = >=3.8
include_package_data = False
install_requires =
    numpy>=1.20
    scipy>=1.6
    scikit-learn>=0.24
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest>=6.2
    coverage>=5.5
    flake8>=3.9